--- a/Diplomapp/Diplomapp/Diplomapp/Views/ProjectPage.xaml
+++ b/Diplomapp/Diplomapp/Diplomapp/Views/ProjectPage.xaml
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+            xmlns:viewmodel="clr-namespace:Diplomapp.ViewModels"
+            xmlns:model="clr-namespace:Diplomapp.Models"
              x:Class="Diplomapp.Views.ProjectPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
-</ContentPage>
+    <TabbedPage.BindingContext>
+        <viewmodel:ProjectPageViewModel/>
+    </TabbedPage.BindingContext>
+  <!--Pages can be added as references or inline-->
+  <ContentPage Title="Информация о проекте" />
+  <ContentPage Title="Команда" />
+  <ContentPage Title="Финансы" />
+</TabbedPage>
