--- a/Diplomapp/Diplomapp/Diplomapp/Views/ProjectPage.xaml
+++ b/Diplomapp/Diplomapp/Diplomapp/Views/ProjectPage.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:viewmodel="clr-namespace:Diplomapp.ViewModels"
             xmlns:model="clr-namespace:Diplomapp.Models"
-             x:Class="Diplomapp.Views.ProjectPage">
+             x:Class="Diplomapp.Views.ProjectPage"
+            xmlns:xtc ="http://xamarin.com/schemas/2020/toolkit"
+            >
     <TabbedPage.BindingContext>
         <viewmodel:ProjectPageViewModel/>
     </TabbedPage.BindingContext>
@@ -19,7 +21,12 @@
             </StackLayout>            
         </ContentPage.Content>
     </ContentPage>
-    <ContentPage Title="Команда"  >
+    <ContentPage Title="Команда" >
+        <ContentPage.Behaviors>
+            <xtc:EventToCommandBehavior
+                EventName="Appearing" Command="{Binding getempl}"
+                />
+        </ContentPage.Behaviors>
         <!--<ContentPage.ToolbarItems>
             <ToolbarItem  Text="Пригласить" />
 
